# hero-tools

./: .clang-format  .gitignore  .gitlab-ci.yml  .gitmodules  LICENSE  Makefile  README.md  hero.mk  mkdocs.yml
.github/workflows/: .gitlab-ci.yml  lint.yml
apps/: .gitignore
apps/carfield/bare/: Makefile  main.c
apps/carfield/omp/: .gitignore
apps/omp/common/: default.mk  devices.mk  hero_64.h
apps/omp/kernels/: fdotp.h
artifacts/: artifacts.mk
docs/: gs.md
docs/software/: hero.md  index.md  openmp.md
scripts/: setenv.sh  vcu118-01.sh  vcu128-01.sh  vcu128-02.sh  vcu128-03.sh  vcu128-04.sh
sw/: README.md  sw.mk
sw/hero-driver/: .gitignore
sw/hero-driver/carfield/: Makefile  carfield.h  carfield_driver.c  carfield_driver.h  carfield_fops.c
sw/hero-driver/common/: hero_iommu.c  hero_iommu.h  hero_utils.c  hero_utils.h
sw/hero-driver/occamy/: Makefile  occamy.h  occamy_driver.c  occamy_driver.h  occamy_fops.c
sw/hero-pcie-data-loader/: hero-pcie-data-loader.c
sw/hero-pcie-dts-driver/: .gitignore  Makefile  hero_pcie_dts.c  hero_pcie_dts.h  snitch_pcie.c  snitch_pcie.h
sw/libhero/: .gitignore  Makefile  README.md
sw/libhero/include/: debug.h  herodev.h  (+1 more)
sw/libllvm/: .gitignore  Makefile
sw/libomp/: Makefile
toolchain/: setup-llvm-device.sh  setup-llvm-snitch.sh  setup-llvm.sh
toolchain/llvm-support/: hc-omp-pass
toolchain/llvm-support/OmpHostPointerLegalizer/: CMakeLists.txt  OmpHostPointerLegalizer.cpp  OmpHostPointerLegalizer.h
toolchain/llvm-support/OmpKernelWrapper/: CMakeLists.txt  OmpKernelWrapper.cpp  OmpKernelWrapper.h
(+60 files in other folders)
